--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
-	"name": "",
-	"version": "0.0.0",
-	"dependencies": {
-		"bootstrap-sass": "3.1.1",
-		"jquery": "~1.9.1"
-	}
+  "name": "ng-frame",
+  "version": "0.0.0",
+  "dependencies": {
+    "jquery": "~1.9.1",
+    "bootstrap-sass-official": "~3.2.0"
+  }
 }
