--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 .sass-cache/
 bower_components/
 node_modules/
+
+dev/style.css
+
 dev/.sass-cache/
 dev/_ocss/
-dev/style.css
+dev/js/vendor/
+dev/styles/vendor/
